--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -12,16 +12,16 @@ wer_file: !ref <output_folder>/wer.txt
 save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 
-# URL for the biggest Fairseq english wav2vec2 model.
-wav2vec2_hub: facebook/wav2vec2-large-lv60
+# URL for the biggest LeBenchmark wav2vec french.
+wav2vec2_hub: LeBenchmark/wav2vec2-FR-7K-large
 
 # Data files
 data_folder: !PLACEHOLDER  # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
 train_tsv_file: !ref <data_folder>/train.tsv  # Standard CommonVoice .tsv files
 dev_tsv_file: !ref <data_folder>/dev.tsv  # Standard CommonVoice .tsv files
 test_tsv_file: !ref <data_folder>/test.tsv  # Standard CommonVoice .tsv files
-accented_letters: False
-language: en # use 'it' for Italian, 'rw' for Kinyarwanda, 'en' for english
+accented_letters: True
+language: fr # use 'it' for Italian, 'rw' for Kinyarwanda, 'en' for english
 train_csv: !ref <save_folder>/train.csv
 valid_csv: !ref <save_folder>/dev.csv
 test_csv: !ref <save_folder>/test.csv
@@ -33,7 +33,7 @@ avoid_if_longer_than: 10.0
 
 # Training parameters
 number_of_epochs: 30
-lr: 1.0
+lr: 0.0003
 lr_wav2vec: 0.0001
 sorting: ascending
 auto_mix_prec: False
@@ -42,7 +42,7 @@ ckpt_interval_minutes: 30 # save checkpoint every N min
 
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
-# Must be 8 per GPU to fit 32GB of VRAM
+# Must be 6 per GPU to fit 16GB of VRAM
 batch_size: 12
 test_batch_size: 4
 
@@ -54,24 +54,22 @@ test_dataloader_options:
     num_workers: 6
 
 # BPE parameters
-token_type: unigram  # ["unigram", "bpe", "char"]
+token_type: char  # ["unigram", "bpe", "char"]
 character_coverage: 1.0
+blank_index: 0
 
 # Model parameters
 activation: !name:torch.nn.LeakyReLU
 wav2vec_output_dim: 1024
 dnn_neurons: 1024
 freeze_wav2vec: False
-dropout: 0.15
+freeze_feature_extractor: True
+warmup_steps: 100
+apply_spec_augment: False
+output_norm: True
 
 # Outputs
-output_neurons: 1000  # BPE size, index(blank/eos/bos) = 0
-
-# Decoding parameters
-# Be sure that the bos and eos index match with the BPEs ones
-blank_index: 0
-bos_index: 1
-eos_index: 2
+output_neurons: 80  # BPE size, index(blank/eos/bos) = 0
 
 #
 # Functions and classes
@@ -86,30 +84,32 @@ augmentation: !new:speechbrain.lobes.augment.TimeDomainSpecAugment
 enc: !new:speechbrain.nnet.containers.Sequential
     input_shape: [null, null, !ref <wav2vec_output_dim>]
     linear1: !name:speechbrain.nnet.linear.Linear
-        n_neurons: !ref <dnn_neurons>
+        n_neurons: 1024
         bias: True
     bn1: !name:speechbrain.nnet.normalization.BatchNorm1d
     activation: !new:torch.nn.LeakyReLU
     drop: !new:torch.nn.Dropout
-        p: !ref <dropout>
+        p: 0.15
     linear2: !name:speechbrain.nnet.linear.Linear
-        n_neurons: !ref <dnn_neurons>
+        n_neurons: 1024
         bias: True
     bn2: !name:speechbrain.nnet.normalization.BatchNorm1d
     activation2: !new:torch.nn.LeakyReLU
     drop2: !new:torch.nn.Dropout
-        p: !ref <dropout>
+        p: 0.15
     linear3: !name:speechbrain.nnet.linear.Linear
-        n_neurons: !ref <dnn_neurons>
+        n_neurons: 1024
         bias: True
     bn3: !name:speechbrain.nnet.normalization.BatchNorm1d
     activation3: !new:torch.nn.LeakyReLU
 
 wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
     source: !ref <wav2vec2_hub>
-    output_norm: True
+    output_norm: !ref <output_norm>
     freeze: !ref <freeze_wav2vec>
+    apply_spec_augment: !ref <apply_spec_augment>
     save_path: !ref <save_folder>/wav2vec2_checkpoint
+    freeze_feature_extractor: !ref <freeze_feature_extractor>
 
 #####
 # Uncomment this block if you prefer to use a Fairseq pretrained model instead
@@ -123,6 +123,7 @@ wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
 #    freeze: False
 #    save_path: !ref <save_folder>/wav2vec2_checkpoint/model.pt
 #####
+
 
 ctc_lin: !new:speechbrain.nnet.linear.Linear
     input_size: !ref <dnn_neurons>
@@ -142,16 +143,16 @@ modules:
 model: !new:torch.nn.ModuleList
     - [!ref <enc>, !ref <ctc_lin>]
 
-model_opt_class: !name:torch.optim.Adadelta
+model_opt_class: !name:torch.optim.AdamW
     lr: !ref <lr>
-    rho: 0.95
-    eps: 1.e-8
+    weight_decay: 0.01
 
-wav2vec_opt_class: !name:torch.optim.Adam
+wav2vec_opt_class: !name:torch.optim.AdamW
     lr: !ref <lr_wav2vec>
+    weight_decay: 0.01
 
 lr_annealing_model: !new:speechbrain.nnet.schedulers.NewBobScheduler
-    initial_value: !ref <lr>
+    initial_value: !ref <lr_wav2vec>
     improvement_threshold: 0.0025
     annealing_factor: 0.8
     patient: 0
