false by default

--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -63,7 +63,7 @@ activation: !name:torch.nn.LeakyReLU
 wav2vec_output_dim: 1024
 dnn_neurons: 1024
 freeze_wav2vec: False
-freeze_feature_extractor: True
+freeze_feature_extractor: False
 warmup_steps: 100
 apply_spec_augment: False
 output_norm: True
