--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -33,6 +33,8 @@ avoid_if_shorter_than: 1.0
 mask_length: 10
 mask_prob: 0.65
 freeze_wav2vec: False
+warmup: 80000
+cooldown: 920000
 
 number_of_epochs: 300
 lr_adam: 0.0006 # This will get reduced by the training scheduler
@@ -96,9 +98,11 @@ opt_class: !name:torch.optim.AdamW
     eps: 0.000000001
     weight_decay: !ref <weight_decay>
 
-noam_annealing: !new:speechbrain.nnet.schedulers.NoamScheduler
-    lr_initial: !ref <lr_adam>
-    n_warmup_steps: 35000
+noam_annealing: !new:speechbrain.nnet.schedulers.WarmCoolDecayLRSchedule
+    lr: !ref <lr_adam>
+    warmup: !ref <warmup>
+    cooldown: !ref <cooldown>
+    total_steps: 1000000
 
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
     checkpoints_dir: !ref <save_folder>
