--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -100,7 +100,7 @@ opt_class: !name:torch.optim.AdamW
     weight_decay: !ref <weight_decay>
 
 noam_annealing: !new:speechbrain.nnet.schedulers.NoamScheduler
-    lr_initial: !ref <lr_adam>
+    lr_initial: 0.000001
     n_warmup_steps: !ref <warmup>
 
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
