--- a/recipes/CommonVoice/ASR/transformer/hparams/train_fr.yaml
+++ b/recipes/CommonVoice/ASR/transformer/hparams/train_fr.yaml
@@ -35,6 +35,7 @@ ckpt_interval_minutes: 15 # save checkpoint every N min
 # Training parameters
 number_of_epochs: 50
 batch_size: 32 # This works with a 32GB GPU ! (bs * nb_gpu * accum) > 128 !
+num_workers: 4
 ctc_weight: 0.3
 gradient_accumulation: 4
 loss_reduction: 'batchmean'
@@ -42,8 +43,7 @@ sorting: random
 
 # stages related parameters
 stage_one_epochs: 40
-lr_adam: 1.0
-lr_sgd: 0.00003
+lr_adam: 0.001
 
 # BPE parameters
 token_type: unigram  # ["unigram", "bpe", "char"]
@@ -54,34 +54,44 @@ sample_rate: 16000
 n_fft: 400
 n_mels: 80
 
+dynamic_batching: False
+
+dynamic_batch_sampler:
+    feats_hop_size: 0.01
+    max_batch_len: 50 # in terms of seconds
+    num_buckets: 200
+    shuffle_ex: False # if true re-creates batches at each epoch shuffling examples.
+    batch_ordering: random
+    max_batch_ex: -1
+
 # Dataloader options
 train_dataloader_opts:
     batch_size: !ref <batch_size>
     shuffle: True
-    num_workers: 6
+    num_workers: !ref <num_workers>
 
 valid_dataloader_opts:
-    batch_size: !ref <batch_size>
-    num_workers: 6
+    batch_size: 1
+    num_workers: !ref <num_workers>
 
 test_dataloader_opts:
-    batch_size: !ref <batch_size>
-    num_workers: 6
+    batch_size: 1
+    num_workers: !ref <num_workers>
 
 ####################### Model parameters ###########################
 # Transformer
-d_model: 768
-nhead: 8
+d_model: 512
+nhead: 4
 num_encoder_layers: 12
 num_decoder_layers: 6
-d_ffn: 3072
-transformer_dropout: 0.0
+d_ffn: 2048
+transformer_dropout: 0.1
 activation: !name:torch.nn.GELU
 output_neurons: 500
 
 # Outputs
 blank_index: 0
-label_smoothing: 0.1
+label_smoothing: 0.0
 pad_index: 0
 bos_index: 1
 eos_index: 2
@@ -89,10 +99,10 @@ eos_index: 2
 # Decoding parameters
 min_decode_ratio: 0.0
 max_decode_ratio: 1.0
-valid_search_interval: 5
+valid_search_interval: 10
 valid_beam_size: 10
 # test_beam_size: 80
-ctc_weight_decode: 0.3
+ctc_weight_decode: 0.4
 
 ############################## models ################################
 
@@ -100,13 +110,13 @@ CNN: !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
     input_shape: (8, 10, 80)
     num_blocks: 3
     num_layers_per_block: 1
-    out_channels: (128, 200, 256)
-    kernel_sizes: (3, 3, 1)
+    out_channels: (64, 64, 64)
+    kernel_sizes: (5, 5, 1)
     strides: (2, 2, 1)
-    residuals: (False, False, False)
+    residuals: (False, False, True)
 
 Transformer: !new:speechbrain.lobes.models.transformer.TransformerASR.TransformerASR # yamllint disable-line rule:line-length
-    input_size: 5120
+    input_size: 1280
     tgt_vocab: !ref <output_neurons>
     d_model: !ref <d_model>
     nhead: !ref <nhead>
@@ -115,7 +125,10 @@ Transformer: !new:speechbrain.lobes.models.transformer.TransformerASR.Transforme
     d_ffn: !ref <d_ffn>
     dropout: !ref <transformer_dropout>
     activation: !ref <activation>
-    normalize_before: False
+    encoder_module: transformer
+    attention_type: regularMHA
+    normalize_before: True
+    causal: False
 
 ctc_lin: !new:speechbrain.nnet.linear.Linear
     input_size: !ref <d_model>
@@ -136,14 +149,9 @@ model: !new:torch.nn.ModuleList
 
 # We define two optimizers as we have two stages (training + finetuning)
 Adam: !name:torch.optim.Adam
-    lr: 0
+    lr: !ref <lr_adam>
     betas: (0.9, 0.98)
     eps: 0.000000001
-
-SGD: !name:torch.optim.SGD
-    lr: !ref <lr_sgd>
-    momentum: 0.99
-    nesterov: True
 
 beam_searcher: !new:speechbrain.decoders.S2STransformerBeamSearch
     modules: [!ref <Transformer>, !ref <seq_lin>, !ref <ctc_lin>]
@@ -171,7 +179,6 @@ seq_cost: !name:speechbrain.nnet.losses.kldiv_loss
 noam_annealing: !new:speechbrain.nnet.schedulers.NoamScheduler
     lr_initial: !ref <lr_adam>
     n_warmup_steps: 25000
-    model_size: !ref <d_model>
 
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
     checkpoints_dir: !ref <save_folder>
@@ -186,19 +193,19 @@ epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
 
 normalize: !new:speechbrain.processing.features.InputNormalization
     norm_type: global
-    update_until_epoch: 3
+    update_until_epoch: 4
 
 augmentation: !new:speechbrain.lobes.augment.SpecAugment
-    time_warp: True
+    time_warp: False
     time_warp_window: 5
     time_warp_mode: bicubic
     freq_mask: True
-    n_freq_mask: 2
+    n_freq_mask: 4
     time_mask: True
-    n_time_mask: 2
+    n_time_mask: 4
     replace_with_zero: False
-    freq_mask_width: 30
-    time_mask_width: 40
+    freq_mask_width: 15
+    time_mask_width: 20
 
 compute_features: !new:speechbrain.lobes.features.Fbank
     sample_rate: !ref <sample_rate>
